# modern-python

./: .gitignore  README.md  generate-outputs.sh  pyproject.toml  zensical.toml
docs/: 01-manage-environments.md  create-dynamic-text.md  index.md  manage-environments.md  samples.md
output/: 02-create-dynamic-text.txt
scripts/: create-database.py  dynamic-text.py  inline-metadata.py  trace_comments.py
scripts/data/: test.db
snippets/: 02-create-dynamic-text.py
