[project]
name = "modern-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.5",
    "sqlalchemy>=2.1.0b1",
]

[dependency-groups]
dev = [
    "zensical>=0.0.23",
    "jupyter>=1.1.1",
]

[tool.setuptools]
packages = []
py-modules = []

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
modern-python = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }